--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,57 @@ body {
 #points{
     padding-left: 200px;    
 }
+
+.game-over{
+    position: fixed;
+    left: 407px;
+    top: 250px;
+    width: 505px;
+    border: 1px solid #eeeeee;
+    background: red;    
+}
+
+.game-over-hide{
+    display: none;
+}
+
+.game-over-show{
+    display: block;
+}
+
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgb(0,0,0,0.4);
+}
+
+.modal-content{
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888888;
+    width: 30%;
+}
+
+.close{
+    color: #aaa;
+    float:right;
+    font-size: 28px;
+    font-weight: bold;
+    top: 0;
+}
+
+.close:hover,
+.close:focus{
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
