--- a/css/style.css
+++ b/css/style.css
@@ -65,24 +65,33 @@ body {
     background-color: rgb(0,0,0,0.4);
 }
 
-.modal-content{
-    background-color: #fefefe;
-    margin: 15% auto;
+.modal-header{
+    background: rgb(243, 245, 243);
+    height: 20px;
+}
+
+.modal-body{
+    background: rgb(243, 245, 243);
     padding: 20px;
+}
+
+.modal-content{    
+    background: rgb(243, 245, 243);
+    margin: 15% auto;    
     border: 1px solid #888888;
     width: 30%;
 }
 
-.close{
+.button-close{
     color: #aaa;
     float:right;
-    font-size: 28px;
-    font-weight: bold;
-    top: 0;
+    margin-right: 10px;
+    /* font-size: 28px; */
+    font-weight: bold;    
 }
 
-.close:hover,
-.close:focus{
+.button-close:hover,
+.button-close:focus{
     color: #000;
     text-decoration: none;
     cursor: pointer;
