--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ body {
     display: block;
 }
 
-
 .modal{
     display: none;
     position: fixed;
@@ -63,6 +62,7 @@ body {
     overflow: auto;
     background-color: rgb(0,0,0);
     background-color: rgb(0,0,0,0.4);
+    border-radius: 3px;
 }
 
 .modal-header{
@@ -80,13 +80,14 @@ body {
     margin: 15% auto;    
     border: 1px solid #888888;
     width: 30%;
+    color: rgb(0,0,0,0.4);
+    font-weight: bold;
 }
 
 .button-close{
     color: #aaa;
     float:right;
-    margin-right: 10px;
-    /* font-size: 28px; */
+    margin-right: 10px;    
     font-weight: bold;    
 }
 
@@ -95,4 +96,16 @@ body {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+#game-over-text{
+    font-size: 28px;
+    margin: 0 auto;
+}
+
+#btn-game-over{
+    background: #4682B4;
+    color: #FFF;
+    padding: 10px;
+    border: 0px;
 }
